[package]

name = "holmes"
version = "0.0.1"
authors = [ "Matthew Maurer <maurer@matthewmaurer.org>" ]
license = "MIT"
description = "Holmes Inference System"
repository = "https://github.com/maurer/holmes"

[dependencies]
postgres = "0.13"
rustc-serialize = "0.3"
log = "0.3"
error-chain = "0.7"
url = "1.2"

[[bench]]
harness = false
name = "clique"

[[bench]]
harness = false
name = "graph"

[[bench]]
harness = false
name = "induction"
