[package]

name = "holmes"
version = "0.1.0"
authors = [ "Matthew Maurer <maurer@matthewmaurer.org>" ]
license = "MIT"
description = "Holmes Inference System"
repository = "https://github.com/maurer/holmes"

[dependencies]
postgres = "0.13"
r2d2 = "0.7"
r2d2_postgres = "0.11"
fallible-iterator = "0.1"
rustc-serialize = "0.3"
log = "0.3"
error-chain = "0.7"
url = "1.2"
tokio-core = "0.1"
futures = "0.1"
env_logger = "0.4"
sha2 = "0.4"

[[bench]]
harness = false
name = "clique"

[[bench]]
harness = false
name = "graph"

[[bench]]
harness = false
name = "induction"
