[package]

name = "holmes"
version = "0.0.1"
authors = [ "Matthew Maurer <maurer@matthewmaurer.org>" ]
build = "build.rs"
license = "MIT"
description = "Holmes Inference System"
repository = "https://github.com/maurer/holmes"

[[bin]]

name = "holmes"
path = "src/main.rs"

[build-dependencies]
capnpc = "0.1.1"

[dependencies]
capnp = "0.1.1"
capnp-rpc = "0.1.1"
postgres = "0.5.2"
